# jeju

./: .dockerignore  .env.dws-testnet  .gitignore  .gitmodules  DECENTRALIZATION-PLAN.md  ONBOARDING-FIXES.md  README.md  biome.json  bun.lockb  clippy.toml  docker-compose.decentralized.yml  docker-compose.stage2.yml  docker-compose.yml  env.example  eslint.config.js  knip.json  package.json  pyproject.toml  rustfmt.toml  setup.txt  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo  turbo.json
.cursor/rules/: bun-conventions.mdc  dont-create-markdown.mdc  dont-swallow-logs.mdc  e2e-testing.mdc  important.mdc  jeju.mdc  models.mdc  run-tests.mdc  synpress.mdc  typescript-types.mdc
.fork/mychain/: README.md  branding.json  chain.json  deploy-l1.ts  deploy-l2.ts  federation.json  genesis.json  keys.json  register-federation.ts
.github/workflows/: babylon-deploy.yml  cli-ci.yml  compute-ci.yml  crucible-ci.yml  deploy-babylon-web.yml  deploy-docs.yml  deploy-dws.yaml  deploy-indexer.yml  deploy-mainnet.yml  deploy-testnet.yml  e2e-synpress.yml  facilitator-ci.yml  gateway-ci.yml  github.yml  leaderboard-pipeline.yml  localnet-test.yml  mirror-to-jejugit.yml  node-operator-ci.yml  publish-jejupkg.yml  publish-packages.yml  sdk-ci.yml  security-audit.yml  service-integration-tests.yml  test-master.yml  test.yml  types-ci.yml  wallet-ci.yml  wallet-release.yml
8004/subgraph/: schema.graphql
apps/auth/: jeju-manifest.json  package.json
apps/autocrat/: .gitignore  Dockerfile  Dockerfile.frontend  README.md  build.web.ts  bunfig.toml  index.html  jeju-manifest.json  package.json  playwright.config.ts  synpress.config.ts  tailwind.config.ts  tsconfig.json
apps/bazaar/: .gitignore  .seed-complete  Dockerfile  README.md  bunfig.toml  config  index.html  jeju-manifest.json  next.config.js  next.config.ts  package.json  playwright-wallet.config.ts  playwright.config.ts  schemas  synpress.config.ts  tailwind.config.ts  tsconfig.json
apps/browser-extension/: README.md  manifest.json  package.json  rules.json
apps/compute/: package.json  tsconfig.tsbuildinfo
apps/crucible/: .gitignore  BASIC-AGENT-FLOW.md  LOCAL-DEV-ISSUES.md  NEW-AGENT-IDEAS.md  PRD-CLEANUP-RED-BLUE-TEAMS.md  README.md  index.html  jeju-manifest.json  package.json  playwright.config.ts  synpress.config.ts  tailwind.config.ts  tsconfig.json
apps/documentation/: Dockerfile  docs-index.json  faq.md  index.md  jeju-manifest.json  package.json  playwright.config.ts  synpress.config.ts  tsconfig.json  vocs.config.ts
apps/dws/: .gitignore  DWS_GIT_PKG_ASSESSMENT.md  Dockerfile  Dockerfile.trigger  FIXES_COMPLETED.md  WORKERD_COMPATIBILITY.md  build.web.ts  bunfig.toml  deployment-localnet.json  deployment-pkg-localnet.json  index.html  jeju-manifest.json  package.json  playwright.config.ts  pyrightconfig.json  synpress.config.ts  test-worker-runtime.ts  tsconfig.json
apps/example/: .gitignore  Dockerfile  README.md  build.ts  deploy.ts  global.d.ts  jeju-manifest.json  package.json  playwright.config.ts  synpress.config.ts  tailwind.config.ts  tsconfig.json
apps/example-app/: build.ts  deploy.ts  jeju-manifest.json  package.json
apps/experimental-dapp/: jeju-manifest.json  package.json
apps/factory/: .gitignore  Dockerfile  Dockerfile.frontend  bunfig.toml  dev-server.ts  eslint.config.js  jeju-manifest.json  middleware.ts  next.config.js  next.config.ts  nginx.conf  package.json  playwright.config.ts  synpress.config.ts  tailwind.config.ts  test-security.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/frontend/: index.html  package.json
apps/gateway/: .gitignore  Dockerfile  Dockerfile.jns  build.web.ts  bunfig.toml  dev-server.ts  eslint.config.js  index.html  jeju-manifest.json  package.json  playwright.config.ts  synpress.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/git/: jeju-manifest.json
apps/indexer/: .env.example  .gitignore  Dockerfile  bunfig.toml  commands.json  index.html  jeju-manifest.json  package.json  playwright.config.ts  schema.graphql  synpress.config.ts  tsconfig.json
apps/monitoring/: .gitignore  index.html  (+8 more)
apps/vpn/app/src-tauri/: Cargo.toml  Entitlements.plist  desktop-template.desktop  tauri.conf.json
apps/vpn/app/src-tauri/src/: autostart.rs  bandwidth.rs  config.rs  dws.rs  lib.rs  main.rs  notifications.rs
apps/vpn/app/src-tauri/src/commands/: auth.rs  bandwidth.rs  contribution.rs  dws.rs  vpn.rs
apps/vpn/app/src-tauri/src/contribution/: mod.rs
apps/vpn/app/src-tauri/src/vpn/: mod.rs  node_discovery.rs  tunnel.rs  wireguard.rs
apps/vpn/src-tauri/: Cargo.toml  tauri.conf.json
apps/vpn/src-tauri/icons/: .gitkeep  icon.icns
apps/vpn/src-tauri/src/: autostart.rs  bandwidth.rs  config.rs  dws.rs  main.rs  notifications.rs  state.rs
apps/vpn/src-tauri/src/commands/: auth.rs  autostart.rs  bandwidth.rs  dws.rs  mod.rs  settings.rs
apps/vpn/src-tauri/src/contribution/: mod.rs
apps/vpn/src-tauri/src/vpn/: mod.rs  node_discovery.rs  tunnel.rs  wireguard.rs
apps/wallet/src-tauri/: Cargo.toml  tauri.conf.json
apps/wallet/src-tauri/src/: lib.rs  main.rs
cache/: solidity-files-cache.json
config/: federation.json
docs-tasks/: PLAN.md
scripts/: README.md  bootstrap-localnet-complete.ts  bootstrap-localnet.ts  check-ports.ts  check-tauri-deps.ts  check-testnet-readiness.ts  configure-hyperlane-remotes.ts  convert-icons.ts  deploy-all.ts  deploy-apps-local.ts  deploy-cloud-integration.ts  deploy-dao-full.ts  deploy-federation.ts  deploy-oracle-localnet.ts  deploy-testnet-full.ts  deploy-worker.ts  deploy.ts  dev-compute.ts  dev-local.ts  dev-with-vendor.ts  dev.ts  fund-testnet-deployer.ts  fund-xlp-testnets.ts  generate-verification-keys.ts  generate-vpn-icons.ts  kill-dev.sh  mine-node-correct.ts  mine-node-identity.ts  patch-synpress.ts  preflight-testnet.ts  prepare-release.ts  publish-packages.ts  register-all.ts  register-identity.ts  register-jns-names.ts  register-local-node.ts  register-node-final.ts  register-node-identity.ts  register-node-with-stake.ts  register-node.ts  (+20 more)
secrets/: jwt-secret.txt
types/: index.ts
(+4491 files in other folders)
