[package]
name = "jeju-vpn"
version = "0.1.0"
description = "Jeju VPN - Free, decentralized VPN"
authors = ["Jeju Network"]
edition = "2021"

[lib]
name = "jeju_vpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# HTTP client for DWS
reqwest = { version = "0.12", features = ["json"] }

# WireGuard (userspace implementation)
boringtun = "0.6"

# WebSocket for node discovery
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Notifications
notify-rust = "4"

# Auto-start
auto-launch = "0.5"

# Networking
hickory-resolver = "0.24"

# Crypto
base64 = "0.22"
rand = "0.8"
hex = "0.4"
# Note: x25519-dalek is provided by boringtun

# Ethereum
alloy = { version = "0.1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
] }

