[package]
name = "jeju-vpn"
version = "0.1.0"
description = "Jeju VPN - Free, decentralized VPN"
authors = ["Jeju Network"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "jeju_vpn_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "jeju-vpn"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2 with plugins
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# HTTP client for DWS
reqwest = { version = "0.12", features = ["json"] }

# WireGuard (userspace implementation via Cloudflare boringtun)
boringtun = { version = "0.6", default-features = false }

# WebSocket for node discovery
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Notifications
notify-rust = "4"

# Auto-start
auto-launch = "0.5"

# Networking
hickory-resolver = "0.24"
socket2 = { version = "0.5", features = ["all"] }
parking_lot = "0.12"

# Crypto - use boringtun's x25519 for key generation
base64 = "0.22"
rand = "0.8"
hex = "0.4"

# IP packet parsing
etherparse = "0.15"

# Ethereum
alloy = { version = "0.1", features = ["full"] }

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
] }
wintun = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28", features = ["net", "ioctl"] }

# TUN interface (desktop only - mobile uses platform APIs)
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tun = { version = "0.6", features = ["async"] }

# iOS dependencies
[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"

# Android dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
